fixes spacing updated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -424,21 +424,13 @@ fieldset:disabled .btn {
 /* White */
 .btn-white {
     background-color: var(--theme-background);
-    font-size: 16px;
-    font-weight: 500;
-    padding: 17px 18px;
-    border-radius: 12px;
     color: var(--theme-primary);
 }
 
 .btn-white:hover {
-    background-color: var(--theme-black);
-    column-rule: var(--theme-background);
-    transition: all 0.4s ease-in-out 0s;
-    -webkit-transition: all 0.4s ease-in-out 0s;
-    -moz-transition: all 0.4s ease-in-out 0s;
-    -ms-transition: all 0.4s ease-in-out 0s;
-    -o-transition: all 0.4s ease-in-out 0s;
+    background-color: var(--theme-secondary-btn) !important;
+    border-color: var(--theme-secondary-btn) !important;
+    color: var(--theme-primary) !important;
 }
 
 .btn-full{display:flex;flex-direction:column;}
@@ -844,11 +836,22 @@ span.login-btn-link-text {line-height: 20px;}
       flex-direction: column;
       justify-content: center; */
     }
-.custom-indicators { position: absolute; bottom: 140px; left: 50%; transform: translateX(-50%); margin: 0; }
+.custom-indicators {
+    position: absolute;
+    /* bottom: 140px; */
+    left: 50%;
+    top: calc(100% - 155px);
+    transform: translateX(-50%);
+    margin: 0;
+}
 .custom-indicators button { width: 6px; height: 6px; border-radius: 50px; background-color: #E3BDA6; border: none; margin: 0 3px; transition: all 0.4s ease; -webkit-border-radius: 50px; -moz-border-radius: 50px; -ms-border-radius: 50px; -o-border-radius: 50px; -webkit-transition: all 0.4s ease; -moz-transition: all 0.4s ease; -ms-transition: all 0.4s ease; -o-transition: all 0.4s ease; }
 .custom-indicators button.active { width: 18px; background-color: var(--theme-primary); }
 
 .custom-arrow:hover{
     opacity: 1;
     background-color: var(--hover-primary-btn);
+}
+.wrap-content-slide {
+    max-width: calc(100% - 100px);
+    margin: 0 auto;
 }
